--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
     "@capacitor/core": "3.0.0",
+    "@ctrl/ngx-github-buttons": "^7.0.0",
     "@ionic/angular": "^5.5.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
