--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@capacitor/core": "3.0.0",
     "@ctrl/ngx-github-buttons": "^7.0.0",
     "@ionic/angular": "^5.5.2",
+    "file-saver": "^2.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -38,6 +39,7 @@
     "@angular/language-service": "~12.0.4",
     "@capacitor/cli": "3.0.0",
     "@ionic/angular-toolkit": "^3.1.1",
+    "@types/file-saver": "^2.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
