⚡ Trying to convert webm to mp3 on the client side

--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "@ctrl/ngx-github-buttons": "^7.0.0",
     "@ionic/angular": "^5.5.2",
     "file-saver": "^2.0.5",
+    "lamejs": "^1.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
