--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "@capacitor/core": "3.0.0",
     "@ctrl/ngx-github-buttons": "^7.0.0",
     "@ionic/angular": "^5.5.2",
+    "@ngneat/transloco": "^2.22.0",
     "file-saver": "^2.0.5",
     "lamejs": "^1.2.0",
     "rxjs": "~6.6.0",
