--- a/front/package.json
+++ b/front/package.json
@@ -14,55 +14,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~12.0.4",
-    "@angular/core": "~12.0.4",
-    "@angular/forms": "~12.0.4",
-    "@angular/platform-browser": "~12.0.4",
-    "@angular/platform-browser-dynamic": "~12.0.4",
-    "@angular/router": "~12.0.4",
-    "@capacitor/core": "3.0.0",
+    "@angular/common": "^12.1.1",
+    "@angular/core": "v12.1.1",
+    "@angular/forms": "^12.1.1",
+    "@angular/platform-browser": "^12.1.1",
+    "@angular/platform-browser-dynamic": "^12.1.1",
+    "@angular/router": "^12.1.1",
+    "@capacitor/core": "^3.0.2",
     "@ctrl/ngx-github-buttons": "^7.0.0",
-    "@ionic/angular": "^5.5.2",
+    "@ionic/angular": "^5.6.11",
     "@ngneat/transloco": "^2.22.0",
     "file-saver": "^2.0.5",
     "lamejs": "^1.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "^7.2.0",
+    "tslib": "^2.3.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.4",
-    "@angular-eslint/builder": "2.0.2",
-    "@angular-eslint/eslint-plugin": "2.0.2",
-    "@angular-eslint/eslint-plugin-template": "2.0.2",
-    "@angular-eslint/template-parser": "2.0.2",
-    "@angular/cli": "~12.0.4",
-    "@angular/compiler": "~12.0.4",
-    "@angular/compiler-cli": "~12.0.4",
-    "@angular/language-service": "~12.0.4",
-    "@capacitor/cli": "3.0.0",
-    "@ionic/angular-toolkit": "^3.1.1",
+    "@angular-devkit/build-angular": "^12.1.1",
+    "@angular-eslint/builder": "^12.2.0",
+    "@angular-eslint/eslint-plugin": "^12.2.0",
+    "@angular-eslint/eslint-plugin-template": "^12.2.0",
+    "@angular-eslint/template-parser": "^12.2.0",
+    "@angular/cli": "^12.1.1",
+    "@angular/compiler": "^12.1.1",
+    "@angular/compiler-cli": "^12.1.1",
+    "@angular/language-service": "^12.1.1",
+    "@capacitor/cli": "^3.0.2",
+    "@ionic/angular-toolkit": "^4.0.0",
     "@types/file-saver": "^2.0.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.2.4"
+    "@types/jasmine": "^3.7.8",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^16.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^35.4.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "jasmine-core": "^3.8.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.3.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.6.0",
+    "protractor": "^7.0.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.5"
   },
   "description": "An Ionic project"
 }
