--- a/front/package.json
+++ b/front/package.json
@@ -14,13 +14,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^12.1.1",
-    "@angular/core": "v12.1.1",
-    "@angular/forms": "^12.1.1",
-    "@angular/platform-browser": "^12.1.1",
-    "@angular/platform-browser-dynamic": "^12.1.1",
-    "@angular/router": "^12.1.1",
-    "@capacitor/core": "^3.0.2",
+    "@angular/common": "^12.1.2",
+    "@angular/core": "12.1.2",
+    "@angular/forms": "^12.1.2",
+    "@angular/platform-browser": "^12.1.2",
+    "@angular/platform-browser-dynamic": "^12.1.2",
+    "@angular/router": "^12.1.2",
+    "@capacitor/core": "^3.1.1",
     "@ctrl/ngx-github-buttons": "^7.0.0",
     "@ionic/angular": "^5.6.11",
     "@ngneat/transloco": "^2.22.0",
@@ -31,26 +31,26 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.1.1",
-    "@angular-eslint/builder": "^12.2.0",
-    "@angular-eslint/eslint-plugin": "^12.2.0",
-    "@angular-eslint/eslint-plugin-template": "^12.2.0",
-    "@angular-eslint/template-parser": "^12.2.0",
-    "@angular/cli": "^12.1.1",
-    "@angular/compiler": "^12.1.1",
-    "@angular/compiler-cli": "^12.1.1",
-    "@angular/language-service": "^12.1.1",
-    "@capacitor/cli": "^3.0.2",
+    "@angular-devkit/build-angular": "^12.1.2",
+    "@angular-eslint/builder": "^12.3.1",
+    "@angular-eslint/eslint-plugin": "^12.3.1",
+    "@angular-eslint/eslint-plugin-template": "^12.3.1",
+    "@angular-eslint/template-parser": "^12.3.1",
+    "@angular/cli": "^12.1.2",
+    "@angular/compiler": "^12.1.2",
+    "@angular/compiler-cli": "^12.1.2",
+    "@angular/language-service": "^12.1.2",
+    "@capacitor/cli": "^3.1.1",
     "@ionic/angular-toolkit": "^4.0.0",
-    "@types/file-saver": "^2.0.2",
-    "@types/jasmine": "^3.7.8",
+    "@types/file-saver": "^2.0.3",
+    "@types/jasmine": "^3.8.1",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^16.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
+    "@types/node": "^16.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "eslint": "^7.30.0",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsdoc": "^35.4.1",
+    "eslint-plugin-jsdoc": "^35.4.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "^3.8.0",
     "jasmine-spec-reporter": "^7.0.0",
@@ -59,9 +59,9 @@
     "karma-coverage": "^2.0.3",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.6.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "^7.0.0",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "description": "An Ionic project"
