--- a/back/vercel.json
+++ b/back/vercel.json
@@ -17,5 +17,16 @@
                 "DELETE"
             ]
         }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                "key": "access-control-allow-origin",
+                "value": "*"
+                }
+            ]
+        }
     ]
 }
