--- a/back/package.json
+++ b/back/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "deploy:heroku": "git subtree push --prefix back heroku master"
+    "deploy:heroku": "cd .. && git subtree push --prefix back heroku master"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.4",
