--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,9 @@
     "@ctrl/ngx-github-buttons": "^7.0.0",
     "@ionic/angular": "^5.6.11",
     "@ngneat/transloco": "^2.22.0",
+    "@types/gapi": "0.0.41",
+    "@types/gapi.auth2": "0.0.55",
+    "@types/gapi.client.drive": "^3.0.13",
     "file-saver": "^2.0.5",
     "lamejs": "^1.2.0",
     "rxjs": "^7.2.0",
