--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "@ctrl/ngx-github-buttons": "^7.0.0",
     "@ionic/angular": "^5.6.13",
     "@ngneat/transloco": "^2.22.0",
+    "dropbox": "^10.5.0",
     "file-saver": "^2.0.5",
     "lamejs": "^1.2.0",
     "rxjs": "^7.3.0",
