--- a/front/package.json
+++ b/front/package.json
@@ -24,11 +24,14 @@
     "@ctrl/ngx-github-buttons": "^7.0.0",
     "@ionic/angular": "^5.6.13",
     "@ngneat/transloco": "^2.22.0",
+    "crypto-browserify": "^3.12.0",
     "dropbox": "^10.5.0",
     "file-saver": "^2.0.5",
     "lamejs": "^1.2.0",
     "rxjs": "^7.3.0",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
+    "util": "^0.12.4",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
@@ -67,9 +70,6 @@
     "protractor": "^7.0.0",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
-  },
-  "browser": {
-    "crypto": false
   },
   "description": "An Ionic project"
 }
