--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "@capacitor/core": "^3.1.2",
     "@ctrl/ngx-github-buttons": "^7.0.0",
     "@ionic/angular": "^5.6.13",
+    "@ionic/storage": "^3.0.6",
     "@ngneat/transloco": "^2.22.0",
     "crypto-browserify": "^3.12.0",
     "dropbox": "^10.5.0",
