--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^12.2.1",
     "@angular/platform-browser-dynamic": "^12.2.1",
     "@angular/router": "^12.2.1",
+    "@azure/msal-angular": "^2.0.3",
+    "@azure/msal-browser": "^2.17.0",
     "@capacitor/core": "^3.1.2",
     "@ctrl/ngx-github-buttons": "^7.0.0",
     "@ionic/angular": "^5.6.13",
