📦 Upddated front dependencies in package.json

--- a/front/tsconfig.app.json
+++ b/front/tsconfig.app.json
@@ -3,6 +3,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
+    "skipLibCheck": true,
     "types": ["gapi.auth2"]
   },
   "files": [
