--- a/front/package.json
+++ b/front/package.json
@@ -20,15 +20,15 @@
     "@angular/platform-browser": "^12.2.14",
     "@angular/platform-browser-dynamic": "^12.2.14",
     "@angular/router": "^12.2.14",
-    "@capacitor/core": "^3.2.5",
-    "@ctrl/ngx-github-buttons": "^7.0.0",
-    "@ionic/angular": "^5.8.5",
+    "@capacitor/core": "^3.3.2",
+    "@ctrl/ngx-github-buttons": "^7.1.0",
+    "@ionic/angular": "^6.0.0-rc.4",
     "@ionic/storage": "^3.0.6",
-    "@ngneat/transloco": "^3.0.7",
+    "@ngneat/transloco": "^3.1.1",
     "crypto-browserify": "^3.12.0",
-    "dropbox": "^10.15.0",
+    "dropbox": "^10.23.0",
     "file-saver": "^2.0.5",
-    "lamejs": "^1.2.0",
+    "lamejs": "^1.2.1",
     "rxjs": "^7.4.0",
     "stream-browserify": "^3.0.0",
     "tslib": "^2.3.1",
@@ -45,15 +45,15 @@
     "@angular/compiler": "^12.2.14",
     "@angular/compiler-cli": "^12.2.14",
     "@angular/language-service": "^12.2.14",
-    "@capacitor/cli": "^3.2.5",
+    "@capacitor/cli": "^3.3.2",
     "@ionic/angular-toolkit": "^5.0.0",
-    "@types/file-saver": "^2.0.3",
+    "@types/file-saver": "^2.0.4",
     "@types/gapi": "0.0.41",
     "@types/gapi.auth2": "0.0.55",
     "@types/gapi.client.drive": "^3.0.13",
-    "@types/jasmine": "^3.10.1",
+    "@types/jasmine": "^3.10.2",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^16.11.6",
+    "@types/node": "^16.11.12",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.1.0",
@@ -62,9 +62,9 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "^3.10.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.7",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.3",
+    "karma-coverage": "^2.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
