--- a/front/package.json
+++ b/front/package.json
@@ -20,16 +20,16 @@
     "@angular/platform-browser": "^13.2.2",
     "@angular/platform-browser-dynamic": "^13.2.2",
     "@angular/router": "^13.2.2",
-    "@capacitor/core": "^3.3.2",
+    "@capacitor/core": "^3.4.1",
     "@ctrl/ngx-github-buttons": "^7.1.0",
-    "@ionic/angular": "^6.0.0-rc.4",
+    "@ionic/angular": "^6.0.7",
     "@ionic/storage": "^3.0.6",
-    "@ngneat/transloco": "^3.1.1",
+    "@ngneat/transloco": "^3.1.3",
     "crypto-browserify": "^3.12.0",
-    "dropbox": "^10.23.0",
+    "dropbox": "^10.24.0",
     "file-saver": "^2.0.5",
     "lamejs": "^1.2.1",
-    "rxjs": "^7.4.0",
+    "rxjs": "^7.5.4",
     "stream-browserify": "^3.0.0",
     "tslib": "^2.3.1",
     "util": "^0.12.4",
@@ -37,40 +37,40 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.3",
-    "@angular-eslint/builder": "^12.6.1",
-    "@angular-eslint/eslint-plugin": "^12.6.1",
-    "@angular-eslint/eslint-plugin-template": "^12.6.1",
-    "@angular-eslint/template-parser": "^12.6.1",
+    "@angular-eslint/builder": "^13.0.1",
+    "@angular-eslint/eslint-plugin": "^13.0.1",
+    "@angular-eslint/eslint-plugin-template": "^13.0.1",
+    "@angular-eslint/template-parser": "^13.0.1",
     "@angular/cli": "^13.2.3",
     "@angular/compiler": "^13.2.2",
     "@angular/compiler-cli": "^13.2.2",
     "@angular/language-service": "^13.2.2",
-    "@capacitor/cli": "^3.3.2",
-    "@ionic/angular-toolkit": "^5.0.0",
-    "@types/file-saver": "^2.0.4",
+    "@capacitor/cli": "^3.4.1",
+    "@ionic/angular-toolkit": "^6.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/gapi": "0.0.41",
-    "@types/gapi.auth2": "0.0.55",
+    "@types/gapi.auth2": "0.0.56",
     "@types/gapi.client.drive": "^3.0.13",
-    "@types/jasmine": "^3.10.2",
+    "@types/jasmine": "^3.10.3",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^16.11.12",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "eslint": "^8.1.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsdoc": "^37.0.3",
+    "@types/node": "^17.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsdoc": "^37.8.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "jasmine-core": "^3.10.1",
+    "jasmine-core": "^4.0.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.9",
+    "karma": "^6.3.16",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.1.0",
+    "karma-coverage": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "^7.0.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   },
   "description": "An Ionic project"
 }
