📦 Added ytpl dependency in package.json

--- a/back/package.json
+++ b/back/package.json
@@ -30,7 +30,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
-    "ytdl-core": "^4.11.0"
+    "ytdl-core": "^4.11.0",
+    "ytpl": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.5",
