--- a/front/package.json
+++ b/front/package.json
@@ -14,15 +14,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^13.3.5",
-    "@angular/core": "13.3.5",
-    "@angular/forms": "^13.3.5",
-    "@angular/platform-browser": "^13.3.5",
-    "@angular/platform-browser-dynamic": "^13.3.5",
-    "@angular/router": "^13.3.5",
+    "@angular/common": "^14.0.0",
+    "@angular/core": "14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
     "@capacitor/core": "^3.5.0",
     "@ctrl/ngx-github-buttons": "^7.1.0",
-    "@ionic/angular": "^6.1.3",
+    "@ionic/angular": "^6.1.9-dev.11654275237.1b595be3",
     "@ionic/storage": "^3.0.6",
     "@ngneat/transloco": "^4.0.0",
     "crypto-browserify": "^3.12.0",
@@ -36,16 +36,16 @@
     "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.4",
+    "@angular-devkit/build-angular": "^14.0.0",
     "@angular-eslint/builder": "13.2.1",
     "@angular-eslint/eslint-plugin": "13.2.1",
     "@angular-eslint/eslint-plugin-template": "13.2.1",
     "@angular-eslint/schematics": "13.2.1",
     "@angular-eslint/template-parser": "13.2.1",
-    "@angular/cli": "^13.3.4",
-    "@angular/compiler": "^13.3.5",
-    "@angular/compiler-cli": "^13.3.5",
-    "@angular/language-service": "^13.3.5",
+    "@angular/cli": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
+    "@angular/language-service": "^14.0.0",
     "@capacitor/cli": "^3.5.0",
     "@ionic/angular-toolkit": "^6.1.0",
     "@types/file-saver": "^2.0.5",
