--- a/front/package.json
+++ b/front/package.json
@@ -20,13 +20,13 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@capacitor/core": "^3.5.0",
+    "@capacitor/core": "^3.5.1",
     "@ctrl/ngx-github-buttons": "^7.1.0",
-    "@ionic/angular": "^6.1.9-dev.11654275237.1b595be3",
+    "@ionic/angular": "^6.1.9",
     "@ionic/storage": "^3.0.6",
-    "@ngneat/transloco": "^4.0.0",
+    "@ngneat/transloco": "^4.1.0",
     "crypto-browserify": "^3.12.0",
-    "dropbox": "^10.28.0",
+    "dropbox": "^10.30.0",
     "file-saver": "^2.0.5",
     "lamejs": "git+https://github.com/abritopach/lamejs.git",
     "rxjs": "^7.5.5",
@@ -46,32 +46,32 @@
     "@angular/compiler": "^14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "^14.0.0",
-    "@capacitor/cli": "^3.5.0",
+    "@capacitor/cli": "^3.5.1",
     "@ionic/angular-toolkit": "^6.1.0",
     "@types/file-saver": "^2.0.5",
-    "@types/gapi": "0.0.41",
+    "@types/gapi": "0.0.42",
     "@types/gapi.auth2": "0.0.56",
     "@types/gapi.client.drive": "^3.0.13",
     "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^17.0.31",
-    "@typescript-eslint/eslint-plugin": "5.17.0",
-    "@typescript-eslint/parser": "5.17.0",
-    "eslint": "^8.12.0",
+    "@types/node": "^17.0.41",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.2.9",
+    "eslint-plugin-jsdoc": "^39.3.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "jasmine-core": "^4.1.0",
+    "jasmine-core": "^4.1.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.19",
+    "karma": "^6.3.20",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^5.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine": "^5.0.1",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "^7.0.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "description": "An Ionic project"
 }
