📦 Updated @angular dependencies

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -13,14 +13,25 @@ BREAKING CHANGE: webpack < 5 used to include polyfills for node.js core modules 
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
-    "lib": ["es2018", "dom"],
+    "lib": [
+      "es2018",
+      "dom"
+    ],
     "paths": {
-      "@environments/*": ["src/environments/*"],
-      "@models/*": ["src/app/models/*"],
-      "@services/*": ["src/app/services/*"],
-      "@utils/*": ["src/app/utils/*"],
+      "@environments/*": [
+        "src/environments/*"
+      ],
+      "@models/*": [
+        "src/app/models/*"
+      ],
+      "@services/*": [
+        "src/app/services/*"
+      ],
+      "@utils/*": [
+        "src/app/utils/*"
+      ],
       "crypto": [
         "./node_modules/crypto-browserify"
       ],
@@ -31,6 +42,7 @@ BREAKING CHANGE: webpack < 5 used to include polyfills for node.js core modules 
         "./node_modules/util"
       ]
     },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
