--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run app:serve-ssr",
+    "serve:ssr": "node dist/app/server/main.js",
+    "build:ssr": "ng build && ng run app:server",
+    "prerender": "ng run app:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,14 +23,18 @@
     "@angular/forms": "^15.2.1",
     "@angular/platform-browser": "^15.2.1",
     "@angular/platform-browser-dynamic": "^15.2.1",
+    "@angular/platform-server": "15.2.1",
     "@angular/router": "^15.2.1",
     "@capacitor/core": "^4.6.1",
     "@ctrl/ngx-github-buttons": "^8.0.0",
     "@ionic/angular": "^6.4.1",
+    "@ionic/angular-server": "^7.0.0-dev.11677689829.1cd3cd8d",
     "@ionic/storage": "^3.0.6",
     "@ngneat/transloco": "^4.2.1",
+    "@nguniversal/express-engine": "^15.2.0",
     "crypto-browserify": "^3.12.0",
     "dropbox": "^10.34.0",
+    "express": "^4.15.2",
     "file-saver": "^2.0.5",
     "lamejs": "git+https://github.com/abritopach/lamejs.git",
     "rxjs": "^7.8.0",
@@ -48,6 +56,8 @@
     "@angular/language-service": "^15.2.1",
     "@capacitor/cli": "^4.6.1",
     "@ionic/angular-toolkit": "^7.0.0",
+    "@nguniversal/builders": "^15.2.0",
+    "@types/express": "^4.17.0",
     "@types/file-saver": "^2.0.5",
     "@types/gapi": "^0.0.43",
     "@types/gapi.auth2": "0.0.56",
