⚡ Updated tsconfig.server.json file

--- a/front/tsconfig.server.json
+++ b/front/tsconfig.server.json
@@ -4,8 +4,13 @@
   "compilerOptions": {
     "outDir": "./out-tsc/server",
     "target": "es2019",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "types": [
-      "node"
+      "node",
+      "gapi",
+      "gapi.auth2"
     ]
   },
   "files": [
