--- a/front/angular.json
+++ b/front/angular.json
@@ -174,7 +174,8 @@
             "tsConfig": "tsconfig.server.json",
             "optimization": false,
             "sourceMap": true,
-            "extractLicenses": false
+            "extractLicenses": false,
+            "buildOptimizer": false
           },
           "configurations": {
             "production": {
@@ -187,7 +188,8 @@
               ],
               "optimization": true,
               "sourceMap": false,
-              "extractLicenses": true
+              "extractLicenses": true,
+              "buildOptimizer": true
             },
             "ci": {}
           },
