📦 Updated dependencies in package.json

--- a/front/package.json
+++ b/front/package.json
@@ -25,21 +25,21 @@
     "@angular/platform-browser-dynamic": "^16.2.5",
     "@angular/platform-server": "16.2.5",
     "@angular/router": "^16.2.5",
-    "@capacitor/core": "^4.6.1",
-    "@ctrl/ngx-github-buttons": "^8.0.0",
-    "@ionic/angular": "^6.4.1",
-    "@ionic/angular-server": "^7.0.0-dev.11677689829.1cd3cd8d",
-    "@ionic/storage": "^3.0.6",
+    "@capacitor/core": "^5.4.0",
+    "@ctrl/ngx-github-buttons": "^9.0.0",
+    "@ionic/angular": "^7.4.0",
+    "@ionic/angular-server": "^7.4.0",
+    "@ionic/storage": "^4.0.0",
     "@ngneat/transloco": "^4.2.1",
     "@nguniversal/express-engine": "^16.2.0",
     "crypto-browserify": "^3.12.0",
     "dropbox": "^10.34.0",
-    "express": "^4.15.2",
+    "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "lamejs": "git+https://github.com/abritopach/lamejs.git",
-    "rxjs": "^7.8.0",
+    "rxjs": "^7.8.1",
     "stream-browserify": "^3.0.0",
-    "tslib": "^2.4.1",
+    "tslib": "^2.6.2",
     "util": "^0.12.5",
     "zone.js": "^0.13.3"
   },
@@ -54,31 +54,31 @@
     "@angular/compiler": "^16.2.5",
     "@angular/compiler-cli": "^16.2.5",
     "@angular/language-service": "^16.2.5",
-    "@capacitor/cli": "^4.6.1",
-    "@ionic/angular-toolkit": "^7.0.0",
+    "@capacitor/cli": "^5.4.0",
+    "@ionic/angular-toolkit": "^10.0.0",
     "@nguniversal/builders": "^16.2.0",
-    "@types/express": "^4.17.0",
+    "@types/express": "^4.17.17",
     "@types/file-saver": "^2.0.5",
-    "@types/gapi": "^0.0.43",
-    "@types/gapi.auth2": "0.0.56",
-    "@types/gapi.client.drive": "^3.0.14",
-    "@types/jasmine": "^4.3.1",
+    "@types/gapi": "^0.0.44",
+    "@types/gapi.auth2": "^0.0.57",
+    "@types/gapi.client.drive": "^3.0.15",
+    "@types/jasmine": "^4.3.5",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^18.11.17",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.6.4",
+    "@types/node": "^20.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsdoc": "^46.8.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "jasmine-core": "^4.5.0",
+    "jasmine-core": "^5.1.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-coverage": "^2.2.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "^7.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
