--- a/back/package.json
+++ b/back/package.json
@@ -72,5 +72,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=16 <17.0.0"
   }
 }
