--- a/front/package.json
+++ b/front/package.json
@@ -72,6 +72,8 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "^5.1.1",
     "jasmine-spec-reporter": "^7.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
