--- a/front/tsconfig.spec.json
+++ b/front/tsconfig.spec.json
@@ -4,7 +4,10 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "jasmine",
+      "node",
+      "gapi",
+      "gapi.auth2"
     ]
   },
   "files": [
