--- a/front/package.json
+++ b/front/package.json
@@ -18,20 +18,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^16.2.5",
-    "@angular/core": "16.2.5",
-    "@angular/forms": "^16.2.5",
-    "@angular/platform-browser": "^16.2.5",
-    "@angular/platform-browser-dynamic": "^16.2.5",
-    "@angular/platform-server": "16.2.5",
-    "@angular/router": "^16.2.5",
+    "@angular/common": "^17.0.5",
+    "@angular/core": "17.0.5",
+    "@angular/forms": "^17.0.5",
+    "@angular/platform-browser": "^17.0.5",
+    "@angular/platform-browser-dynamic": "^17.0.5",
+    "@angular/platform-server": "17.0.5",
+    "@angular/router": "^17.0.5",
+    "@angular/ssr": "^17.0.5",
     "@capacitor/core": "^5.4.0",
     "@ctrl/ngx-github-buttons": "^9.0.0",
     "@ionic/angular": "^7.4.0",
     "@ionic/angular-server": "^7.4.0",
     "@ionic/storage": "^4.0.0",
-    "@ngneat/transloco": "^4.2.1",
-    "@nguniversal/express-engine": "^16.2.0",
+    "@ngneat/transloco": "^6.0.0",
     "crypto-browserify": "^3.12.0",
     "dropbox": "^10.34.0",
     "express": "^4.18.2",
@@ -41,22 +41,21 @@
     "stream-browserify": "^3.0.0",
     "tslib": "^2.6.2",
     "util": "^0.12.5",
-    "zone.js": "^0.13.3"
+    "zone.js": "^0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.2",
+    "@angular-devkit/build-angular": "^17.0.5",
     "@angular-eslint/builder": "^17.1.1",
     "@angular-eslint/eslint-plugin": "^17.1.1",
     "@angular-eslint/eslint-plugin-template": "^16.1.2",
     "@angular-eslint/schematics": "^17.1.1",
     "@angular-eslint/template-parser": "^17.1.1",
-    "@angular/cli": "^16.2.2",
-    "@angular/compiler": "^16.2.5",
-    "@angular/compiler-cli": "^16.2.5",
-    "@angular/language-service": "^16.2.5",
+    "@angular/cli": "^17.0.5",
+    "@angular/compiler": "^17.0.5",
+    "@angular/compiler-cli": "^17.0.5",
+    "@angular/language-service": "^17.0.5",
     "@capacitor/cli": "^5.4.0",
     "@ionic/angular-toolkit": "^10.0.0",
-    "@nguniversal/builders": "^16.2.0",
     "@types/express": "^4.17.17",
     "@types/file-saver": "^2.0.5",
     "@types/gapi": "^0.0.44",
@@ -81,7 +80,7 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "description": "An Ionic project"
 }
